--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: 
+title: Excelsior
 header-img: img/home-bg.png
 email: kennethchoi19@gmail.com
 copyright_name: kenkuts
 description: > # this means to ignore newlines until "baseurl:"
-  
+  Keep moving forward
 baseurl: "" # the subpath of your site, e.g. /blog
 twitter_username: 
 github_username:  kenkuts
